# stdcorelib

./: CMakeLists.txt  LICENSE  README.md  cpputilsConfig.cmake.in  stdcorelibConfig.cmake.in
examples/: CMakeLists.txt  console.cpp  system.cpp
examples/platform/windows/: registry.cpp
examples/support/: popen.cpp  sharedlibrary.cpp
include/cpputils/: codec.h  console.h  format.h  global.h  library.h  path.h  pimpl.h  plugin.h  pluginfactory.h  pluginfactory_p.h  stringutil.h  system.h  vla.h  windows_utils.h
include/stdcorelib/: algorithms.h  codec.h  console.h  format.h  global.h  library.h  linked_map.h  ordered_map.h  orderedmap.h  path.h  pimpl.h  plugin.h  pluginfactory.h  scope_guard.h  stdc_global.h  str.h  strings.h  stringutil.h  system.h  vla.h  windows_utils.h
include/stdcorelib/adt/: array_view.h  linked_map.h
include/stdcorelib/experimental/: process.h
include/stdcorelib/platform/: osapi_win.h
include/stdcorelib/platform/windows/: registry.h  stdc_windows.h  winapi.h  winextra.h
include/stdcorelib/private/: pluginfactory_p.h
include/stdcorelib/stlextra/: algorithms.h  iterator.h
include/stdcorelib/support/: logging.h  popen.h  sharedlibrary.h  versionnumber.h
src/: codec.cpp  console.cpp  format.cpp  library.cpp  linked_map.cpp  ordered_map.cpp  orderedmap.cpp  path.cpp  plugin.cpp  pluginfactory.cpp  str.cpp  str_p.h  strings.cpp  stringutil.cpp  system.cpp  vla.cpp  windows_utils.cpp
src/adt/: array_view.cpp  iterator.cpp
src/experimental/: process.cpp  process_darwin.mm  process_unix.cpp  process_win.cpp
src/platform/: osapi_win.cpp
src/platform/windows/: registry.cpp  winapi.cpp  winextra.cpp
src/support/: library.cpp  logging.cpp  popen.cpp  popen_darwin.mm  popen_p.h  popen_unix.cpp  popen_win.cpp  sharedlibrary.cpp  versionnumber.cpp
tests/: CMakeLists.txt
tests/all/: CMakeLists.txt  main.cpp
tests/auto/: CMakeLists.txt  test_codec.cpp  test_format.cpp  test_linked_map.cpp  test_str.cpp  test_strings.cpp  test_vla.cpp
tests/auto/platform/windows/: test_registry.cpp
tests/auto/support/: test_library.cpp  test_versionnumber.cpp
tests/vla/: CMakeLists.txt  main.cpp
